# bn-tricore-arch

./: CMakeLists.txt  NOTICE.txt  README.md
src/: architecture.cpp  flags.h  info.cpp  instructions.h  lift.cpp  opcodes.h  registers.h  text.cpp  util.cpp  util.h
